# taichi-extras

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  bunny.ply  ct_to_mesh.py  environment.yaml  hello.py  landmarks.csv  landmarks.md  landmarks.txt  landmarks_view.py  nricp.py  pyproject.toml  register.py  report.md  requirements.txt  template.py
.github/workflows/: ci.yaml
examples/deformation_transfer/: Makefile  README.md  align.py  gradient_descent.py  transform.py
examples/deformation_transfer/data/: .gitignore
examples/deformation_transfer/docs/: index.md
examples/mesh_viewer/: Makefile  main.py
examples/projective_statics/: Makefile  fixed_indices.py  generate.py  main.py
examples/tetgen/: Makefile
make/: install-tetgen.mk  install.mk
script/: install-tetgen.mk
scripts/: setup-cuda.sh
taichi_extras/: __init__.py  logging.py
taichi_extras/cmd/: __main__.py
taichi_extras/cmd/mesh/: __main__.py  info.py  simplify.py
taichi_extras/common/: logging.py  typer.py  typing.py
taichi_extras/examples/deformation_transfer/: Makefile  align.py  gradient_descent.py  transform.py
taichi_extras/examples/projective_dynamics/: Makefile  README.md  main.py
taichi_extras/examples/projective_dynamics_cg/: Makefile  main.py
taichi_extras/examples/projective_dynamics_hard/: Makefile  main.py
taichi_extras/examples/projective_dynamics_sparse/: Makefile  main.py
taichi_extras/examples/projective_statics/: Makefile  README.md  fixed_indices.py  hello.py  main.1.py  main.py
taichi_extras/examples/sculptor/: .gitignore  Makefile  README.md
taichi_extras/examples/tetgen/: Makefile  README.md  convert.py  generate.py  view.py
taichi_extras/io/: ele.py  face.py  node.py  pyvista.py  smesh.py  stl.py  tetgen.py  utils.py
taichi_extras/lang/mesh/: mesh_element_field.py
taichi_extras/math/: mat3.py
taichi_extras/math/spatial/: transform.py
taichi_extras/mesh/: obj.py  tet.py
taichi_extras/patches/ui/: camera.py  utils.py  window.py
taichi_extras/physics/projective_dynamics/: config.py  conjugate_gradient.py  const.py  dynamics.py  fixed.py  init.py  lhs.py  mathematics.py  rhs.py  visual.py
taichi_extras/pyvista/poly_data/: __init__.py
taichi_extras/spatial/: transform.py
taichi_extras/tetgen/: const.py
taichi_extras/tetgen/io/: face.py  results.py  smesh.py
taichi_extras/typer/: run.py
taichi_extras/ui/: camera.py  utils.py  window.py
taichi_extras/utils/: like.py
taichi_extras/utils/field/: shape.py
(+64 files in other folders)
