[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = ""
license = "MIT"
name = "taichi-extras"
packages = [{ include = "taichi_extras" }]
readme = "README.md"
repository = "https://github.com/liblaf/taichi-extras"
version = "0.1.0"

[tool.poetry.dependencies]
meshio = { extras = ["all"], version = "^5.3.4" }
meshtaichi-patcher = "^0.0.19"
numpy = "^1.24.3"
python = ">=3.11,<3.12"
pyvista = { extras = ["all"], version = "^0.39.1" }
taichi = "^1.6.0"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
