[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = "Simple utils & patches for Taichi"
license = "MIT"
name = "taichi-extras"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.8.0"
numpy = "^1.26.1"
opencv-python = "^4.8.1.78"
pyacvd = "^0.2.9"
pynrrd = "^1.0.0"
python = ">=3.10,<3.12"
pyvista = "^0.42.3"
taichi = "^1.6.0"
trimesh = { extras = ["all"], version = "^4.0.0" }
typer = "^0.9.0"
open3d = "^0.17.0"

[tool.poetry.scripts]
te = "taichi_extras.cmd.__main__:app"

[[tool.poetry.source]]
name = "mirrors"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
